--- a/Augmentation_model.ipynb
+++ b/Augmentation_model.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "VwV7zGJuOWEW"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "KXttTP5vOlOz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
         "id": "567ScSeiSeXl",
         "outputId": "10ef780e-d313-47d4-8d62-dfb2d2e7c0cd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
         "id": "yUx9eAEQOeAr",
         "outputId": "8b6d3c56-c447-4bc2-f343-314bfe535257"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
         "id": "EQ1v6fZWO6st",
         "outputId": "b3df2e0b-81a1-49c8-f7fa-291fdf515120"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
         "id": "lu_EtgScQGKv",
         "outputId": "6c619653-a121-4a5f-c815-69dba9f7e6a0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +188,7 @@
         "id": "XLx7s_oZPE8w",
         "outputId": "7cc66101-3f72-4f44-f506-f0301fe20c05"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "Eam2Nd_TPgny"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "VXGGS-y2Terd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -248,13 +248,12 @@
         "        img = cv2.imread(str(image))\n",
         "        resized_img = cv2.resize(img, (180,180))\n",
         "        x.append(resized_img)\n",
-        "        y.append(flowers_labels_dict[flower_name])\n",
-        ""
+        "        y.append(flowers_labels_dict[flower_name])\n"
       ],
       "metadata": {
         "id": "Pa4A9kgwTh27"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +265,7 @@
       "metadata": {
         "id": "xB05J5nZTsPy"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +277,7 @@
       "metadata": {
         "id": "P8S8aZYvUXSh"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +289,7 @@
       "metadata": {
         "id": "BZQ17MHbUdUU"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +313,7 @@
       "metadata": {
         "id": "npjhX6GhUp4f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -333,7 +332,7 @@
         "id": "J4iPF-paUwZA",
         "outputId": "f51536e8-2315-4880-a51d-c0ff5aa25ffa"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -415,7 +414,7 @@
         "id": "BjvbHQzQU1MZ",
         "outputId": "1a943022-d16f-4b02-9571-334d3c65da2f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
