--- a/NLP/Stop_word.ipynb
+++ b/NLP/Stop_word.ipynb
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ea589a79-49b9-44f8-9610-c34d6de2ade0",
    "metadata": {},
    "outputs": [],
@@ -909,8 +909,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "740cc22a-d98e-4599-89a6-32f12406342d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>contents</th>\n",
+       "      <th>date</th>\n",
+       "      <th>topics</th>\n",
+       "      <th>components</th>\n",
+       "      <th>contents_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18-898</td>\n",
+       "      <td>$100 Million Settlement Will Speed Cleanup Wor...</td>\n",
+       "      <td>The U.S. Department of Justice, the U.S. Envir...</td>\n",
+       "      <td>2018-07-09T00:00:00-04:00</td>\n",
+       "      <td>[Environment]</td>\n",
+       "      <td>[Environment and Natural Resources Division]</td>\n",
+       "      <td>[U.S., Department, Justice, ,, U.S., Environme...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>14-1412</td>\n",
+       "      <td>14 Indicted in Connection with New England Com...</td>\n",
+       "      <td>A 131-count criminal indictment was unsealed t...</td>\n",
+       "      <td>2014-12-17T00:00:00-05:00</td>\n",
+       "      <td>[Consumer Protection]</td>\n",
+       "      <td>[Civil Division]</td>\n",
+       "      <td>[131, -, count, criminal, indictment, unsealed...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>17-1419</td>\n",
+       "      <td>2017 Southeast Regional Animal Cruelty Prosecu...</td>\n",
+       "      <td>The United States Attorney’s Office for the Mi...</td>\n",
+       "      <td>2017-12-14T00:00:00-05:00</td>\n",
+       "      <td>[Environment]</td>\n",
+       "      <td>[Environment and Natural Resources Division, U...</td>\n",
+       "      <td>[United, States, Attorney, Office, Middle, Dis...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>15-1562</td>\n",
+       "      <td>21st Century Oncology to Pay $19.75 Million to...</td>\n",
+       "      <td>21st Century Oncology LLC, has agreed to pay $...</td>\n",
+       "      <td>2015-12-18T00:00:00-05:00</td>\n",
+       "      <td>[False Claims Act, Health Care Fraud]</td>\n",
+       "      <td>[Civil Division]</td>\n",
+       "      <td>[21st, Century, Oncology, LLC, ,, agreed, pay,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>17-1404</td>\n",
+       "      <td>21st Century Oncology to Pay $26 Million to Se...</td>\n",
+       "      <td>21st Century Oncology Inc. and certain of its ...</td>\n",
+       "      <td>2017-12-12T00:00:00-05:00</td>\n",
+       "      <td>[Health Care Fraud, False Claims Act]</td>\n",
+       "      <td>[Civil Division, USAO - Florida, Middle]</td>\n",
+       "      <td>[21st, Century, Oncology, Inc., certain, subsi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13081</th>\n",
+       "      <td>14-1377</td>\n",
+       "      <td>Yuba City, California, Man Sentenced to 46 Mon...</td>\n",
+       "      <td>Anthony Merrell Tyler, 34, of Yuba City, Calif...</td>\n",
+       "      <td>2014-12-09T00:00:00-05:00</td>\n",
+       "      <td>[Hate Crimes]</td>\n",
+       "      <td>[Civil Rights Division, Civil Rights - Crimina...</td>\n",
+       "      <td>[Anthony, Merrell, Tyler, ,, 34, ,, Yuba, City...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13082</th>\n",
+       "      <td>16-735</td>\n",
+       "      <td>Yuengling to Upgrade Environmental Measures to...</td>\n",
+       "      <td>The Department of Justice and the U.S. Environ...</td>\n",
+       "      <td>2016-06-23T00:00:00-04:00</td>\n",
+       "      <td>[Environment]</td>\n",
+       "      <td>[Environment and Natural Resources Division]</td>\n",
+       "      <td>[Department, Justice, U.S., Environmental, Pro...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13084</th>\n",
+       "      <td>17-045</td>\n",
+       "      <td>Zimmer Biomet Holdings Inc. Agrees to Pay $17....</td>\n",
+       "      <td>Subsidiary Agrees to Plead Guilty to Violating...</td>\n",
+       "      <td>2017-01-12T00:00:00-05:00</td>\n",
+       "      <td>[Foreign Corruption]</td>\n",
+       "      <td>[Criminal Division, Criminal - Criminal Fraud ...</td>\n",
+       "      <td>[Subsidiary, Agrees, Plead, Guilty, Violating,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13085</th>\n",
+       "      <td>17-252</td>\n",
+       "      <td>ZTE Corporation Agrees to Plead Guilty and Pay...</td>\n",
+       "      <td>ZTE Corporation has agreed to enter a guilty p...</td>\n",
+       "      <td>2017-03-07T00:00:00-05:00</td>\n",
+       "      <td>[Asset Forfeiture, Counterintelligence and Exp...</td>\n",
+       "      <td>[National Security Division (NSD), USAO - Texa...</td>\n",
+       "      <td>[ZTE, Corporation, agreed, enter, guilty, plea...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13086</th>\n",
+       "      <td>17-304</td>\n",
+       "      <td>ZTE Corporation Pleads Guilty for  Violating U...</td>\n",
+       "      <td>ZTE Corporation pleaded guilty today to conspi...</td>\n",
+       "      <td>2017-03-22T00:00:00-04:00</td>\n",
+       "      <td>[Counterintelligence and Export Control]</td>\n",
+       "      <td>[National Security Division (NSD), USAO - Texa...</td>\n",
+       "      <td>[ZTE, Corporation, pleaded, guilty, today, con...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4688 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id                                              title  \\\n",
+       "4       18-898  $100 Million Settlement Will Speed Cleanup Wor...   \n",
+       "7      14-1412  14 Indicted in Connection with New England Com...   \n",
+       "19     17-1419  2017 Southeast Regional Animal Cruelty Prosecu...   \n",
+       "22     15-1562  21st Century Oncology to Pay $19.75 Million to...   \n",
+       "23     17-1404  21st Century Oncology to Pay $26 Million to Se...   \n",
+       "...        ...                                                ...   \n",
+       "13081  14-1377  Yuba City, California, Man Sentenced to 46 Mon...   \n",
+       "13082   16-735  Yuengling to Upgrade Environmental Measures to...   \n",
+       "13084   17-045  Zimmer Biomet Holdings Inc. Agrees to Pay $17....   \n",
+       "13085   17-252  ZTE Corporation Agrees to Plead Guilty and Pay...   \n",
+       "13086   17-304  ZTE Corporation Pleads Guilty for  Violating U...   \n",
+       "\n",
+       "                                                contents  \\\n",
+       "4      The U.S. Department of Justice, the U.S. Envir...   \n",
+       "7      A 131-count criminal indictment was unsealed t...   \n",
+       "19     The United States Attorney’s Office for the Mi...   \n",
+       "22     21st Century Oncology LLC, has agreed to pay $...   \n",
+       "23     21st Century Oncology Inc. and certain of its ...   \n",
+       "...                                                  ...   \n",
+       "13081  Anthony Merrell Tyler, 34, of Yuba City, Calif...   \n",
+       "13082  The Department of Justice and the U.S. Environ...   \n",
+       "13084  Subsidiary Agrees to Plead Guilty to Violating...   \n",
+       "13085  ZTE Corporation has agreed to enter a guilty p...   \n",
+       "13086  ZTE Corporation pleaded guilty today to conspi...   \n",
+       "\n",
+       "                            date  \\\n",
+       "4      2018-07-09T00:00:00-04:00   \n",
+       "7      2014-12-17T00:00:00-05:00   \n",
+       "19     2017-12-14T00:00:00-05:00   \n",
+       "22     2015-12-18T00:00:00-05:00   \n",
+       "23     2017-12-12T00:00:00-05:00   \n",
+       "...                          ...   \n",
+       "13081  2014-12-09T00:00:00-05:00   \n",
+       "13082  2016-06-23T00:00:00-04:00   \n",
+       "13084  2017-01-12T00:00:00-05:00   \n",
+       "13085  2017-03-07T00:00:00-05:00   \n",
+       "13086  2017-03-22T00:00:00-04:00   \n",
+       "\n",
+       "                                                  topics  \\\n",
+       "4                                          [Environment]   \n",
+       "7                                  [Consumer Protection]   \n",
+       "19                                         [Environment]   \n",
+       "22                 [False Claims Act, Health Care Fraud]   \n",
+       "23                 [Health Care Fraud, False Claims Act]   \n",
+       "...                                                  ...   \n",
+       "13081                                      [Hate Crimes]   \n",
+       "13082                                      [Environment]   \n",
+       "13084                               [Foreign Corruption]   \n",
+       "13085  [Asset Forfeiture, Counterintelligence and Exp...   \n",
+       "13086           [Counterintelligence and Export Control]   \n",
+       "\n",
+       "                                              components  \\\n",
+       "4           [Environment and Natural Resources Division]   \n",
+       "7                                       [Civil Division]   \n",
+       "19     [Environment and Natural Resources Division, U...   \n",
+       "22                                      [Civil Division]   \n",
+       "23              [Civil Division, USAO - Florida, Middle]   \n",
+       "...                                                  ...   \n",
+       "13081  [Civil Rights Division, Civil Rights - Crimina...   \n",
+       "13082       [Environment and Natural Resources Division]   \n",
+       "13084  [Criminal Division, Criminal - Criminal Fraud ...   \n",
+       "13085  [National Security Division (NSD), USAO - Texa...   \n",
+       "13086  [National Security Division (NSD), USAO - Texa...   \n",
+       "\n",
+       "                                            contents_new  \n",
+       "4      [U.S., Department, Justice, ,, U.S., Environme...  \n",
+       "7      [131, -, count, criminal, indictment, unsealed...  \n",
+       "19     [United, States, Attorney, Office, Middle, Dis...  \n",
+       "22     [21st, Century, Oncology, LLC, ,, agreed, pay,...  \n",
+       "23     [21st, Century, Oncology, Inc., certain, subsi...  \n",
+       "...                                                  ...  \n",
+       "13081  [Anthony, Merrell, Tyler, ,, 34, ,, Yuba, City...  \n",
+       "13082  [Department, Justice, U.S., Environmental, Pro...  \n",
+       "13084  [Subsidiary, Agrees, Plead, Guilty, Violating,...  \n",
+       "13085  [ZTE, Corporation, agreed, enter, guilty, plea...  \n",
+       "13086  [ZTE, Corporation, pleaded, guilty, today, con...  \n",
+       "\n",
+       "[4688 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4971dde5-072d-4970-acf7-6513ec2fd41b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The U.S. Department of Justice, the U.S. Environmental Protection Agency (EPA), and the Rhode Island\n"
+     ]
+    }
+   ],
+   "source": [
+    "#looking fro difference between contents and contents_new \n",
+    "print(df.contents[4][:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5ec20f4b-060a-4ee0-ba1d-b490c94dba1b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['U.S.', 'Department', 'Justice', ',', 'U.S.', 'Environmental', 'Protection', 'Agency', '(', 'EPA', ')', ',', 'Rhode', 'Island', 'Department', 'Environmental', 'Management', '(', 'RIDEM', ')', 'announced', 'today', 'subsidiaries', 'Stanley', 'Black', '&', 'Decker', 'Inc.—Emhart', 'Industries', 'Inc.', 'Black', '&', 'Decker', 'Inc.—have', 'agreed', 'clean', 'dioxin', 'contaminated', 'sediment', 'soil', 'Centredale', 'Manor', 'Restoration', 'Project', 'Superfund', 'Site', 'North', 'Providence', 'Johnston', ',', 'Rhode', 'Island', '.', '\\xa0 ', '“', 'pleased', 'reach', 'resolution', 'collaborative', 'work', 'responsible', 'parties', ',', 'EPA', ',', 'stakeholders', ',', '”', 'said', '\\xa0', 'Acting', 'Assistant', 'Attorney', 'General', 'Jeffrey', 'H.', 'Wood', 'Justice', 'Department', '\\xa0', 'Environment', 'Natural', 'Resources', 'Division', '.', '“', 'Today', 'settlement', 'ends', 'protracted', 'litigation', 'allows', 'important', 'work', 'underway', 'restore', 'healthy', 'environment', 'citizens', 'living']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.contents_new[4][:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30b20f83-3b84-4448-8c66-f46e6b00562a",
    "metadata": {},
    "outputs": [],
    "source": []
